[package]
name = "lindy"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
toml = "0.5"
# tokio = {  version = "0.3", features = ["macros", "rt", "sync", "net", "io-util"] }
# tokio-util = { version = "0.5", features = ["codec"] }
tokio = {  version = "0.2", features = ["macros", "rt-core", "rt-util"] }
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.3", features = ["codec"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
thiserror = "1.0"
secp256kfun = { path = "../secp256kfun/secp256kfun", features = ["serde", "libsecp_compat"] }
bdk = {  path = "../bdk", features = ["key-value-db", "esplora", "compiler", "async-interface"], default-features = false }
ecdsa_fun = { path = "../secp256kfun/ecdsa_fun", features = ["serde", "libsecp_compat"] }
chacha20 = "0.6"
rand = "0.7"
sha2 = "0.9"
